docs: revision 2 del diagnostico tras auditoria cruzada
Dos auditorias independientes encontraron errores de hecho que invalidan
parte del diagnostico anterior. Se retiran o corrigen:

- "el PDV rutea al central por WAN": falso. El PDV lee del filial en sus
  tres operaciones calientes (buscador, venta-touch.service, pago-touch).
  El ruteo al central sigue siendo real para pantallas administrativas.
- "saveVenta abre 30-40 transacciones SERIALIZABLE": falso. Ya esta
  anotado @Transactional; con propagacion REQUIRED las internas joinean y
  Spring ignora su isolation en silencio.
- "OpenEntityManagerInView retiene la conexion": falso con Hibernate 5 +
  RESOURCE_LOCAL (DELAYED_ACQUISITION). Retiene el EntityManager. Y
  spring.jpa.open-in-view=false no hace nada porque el filtro esta
  registrado como @Bean explicito: se elimina del plan.
- "259 indices vs 56": sin sustento. El central incluye un dump pg_dump en
  V0; el filial arranca en V3 con esquema base fuera de Flyway. Solo se
  demuestra con pg_indexes contra una filial real.
- Varios conteos corregidos (804 y no 875 invocaciones, 426 y no 516 al
  central, 290 y no 166 migraciones).

Hallazgos nuevos que la v1 no vio:
- REPLICA IDENTITY FULL en todas las tablas replicadas: seq scan por fila
  en el apply worker, compitiendo con el PDV por el mismo disco
- slots de replicacion inactivos anclando ~4,8 GB de WAL y bloqueando el
  vacuum de catalogos
- JVM sin -Xmx ni flags de GC en toda la infraestructura
- app.disableHardwareAcceleration() en Electron
- RetryableDataSource: 10 reintentos sobre getConnection() amplifican el
  timeout de pool de 60 s a minutos
- RestTemplate del filial sin timeout; JDBC remoto a filiales sin timeout
- JasperReport compilado en runtime sin cache (24 usos)
- 269 new ModelMapper() inline pese a existir un @Bean sin usar
- stock_por_producto_sucursal ya existe y ya se replica

Correcciones al plan: Flyway 5.2.3 en filial no soporta
executeInTransaction=false (los indices van por ps